Change Discord webhook URL in index.html
Updated the webhook URL to a specific Discord webhook.

--- a/index.html
+++ b/index.html
@@ -459,7 +459,8 @@
       const formData = new FormData(form);
       const data = Object.fromEntries(formData.entries());
 
-      const webhookURL = "YOUR_DISCORD_WEBHOOK_URL_HERE";
+      const webhookURL = "      await fetch(https://discord.com/api/webhooks/1460470276100718836/TkPcYL7JdVkx_XZ-XpNrOXOZoVjRJmFDqYlYi8DZMVOvlkF699GOAW1VOc349Ov2adLf, {
+";
 
       const message = {
         content: `📩 **New Licensing Inquiry — Big Dress Energy™**
@@ -477,7 +478,6 @@ ${data.project_description || "N/A"}
         `
       };
 
-      await fetch(https://discord.com/api/webhooks/1460470276100718836/TkPcYL7JdVkx_XZ-XpNrOXOZoVjRJmFDqYlYi8DZMVOvlkF699GOAW1VOc349Ov2adLf, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
       <form>
