Fix script tag formatting in index.html

--- a/index.html
+++ b/index.html
@@ -449,8 +449,8 @@
       </form>
     </section>
   </main>
-  <script>
- <script>
+  
+    <script>
   document.addEventListener("DOMContentLoaded", function () {
     const form = document.querySelector("form");
 
@@ -482,6 +482,8 @@ ${data.project_description || "N/A"}`
       form.reset();
     });
   });
+</script>
+
 </script>
  
 </body>
