Enhance index.html with licensing details and styles
Added title and meta tags for licensing page, along with styling and content for various sections including licensing options and target audiences.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,232 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>Sista'Big Dress'™ Licensing | CultureCare Studio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <style>
+    :root {
+      --bg: #faf7f2;
+      --card: #ffffff;
+      --accent: #d88b5b;
+      --accent2: #f2a063;
+      --text: #2b2623;
+      --muted: #6b605a;
+      --border: #e1d6cd;
+      --radius: 14px;
+      --shadow: 0 12px 28px rgba(0,0,0,0.08);
+    }
+
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: radial-gradient(circle at top left, #fff5ea, #faf7f2);
+      color: var(--text);
+      line-height: 1.6;
+    }
+
+    header {
+      padding: 60px 20px 40px;
+      text-align: center;
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    h1 {
+      font-size: 2.8rem;
+      margin-bottom: 10px;
+      font-weight: 700;
+      letter-spacing: -0.5px;
+    }
+
+    .tagline {
+      font-size: 1.1rem;
+      color: var(--muted);
+      max-width: 650px;
+      margin: 0 auto 30px;
+    }
+
+    .hero-img {
+      width: 240px;
+      height: auto;
+      margin: 20px auto 0;
+      display: block;
+      border-radius: 12px;
+      box-shadow: var(--shadow);
+    }
+
+    .section {
+      max-width: 900px;
+      margin: 50px auto;
+      padding: 0 20px;
+    }
+
+    h2 {
+      font-size: 1.8rem;
+      margin-bottom: 12px;
+      font-weight: 650;
+    }
+
+    .card {
+      background: var(--card);
+      padding: 28px;
+      border-radius: var(--radius);
+      border: 1px solid var(--border);
+      box-shadow: var(--shadow);
+      margin-bottom: 30px;
+    }
+
+    .pill-row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 12px;
+    }
+
+    .pill {
+      padding: 6px 14px;
+      border-radius: 999px;
+      background: #fff7f1;
+      border: 1px solid var(--accent2);
+      font-size: 0.85rem;
+      color: var(--muted);
+    }
+
+    .cta {
+      text-align: center;
+      margin: 60px 0;
+    }
+
+    .cta a {
+      display: inline-block;
+      padding: 14px 28px;
+      background: linear-gradient(135deg, var(--accent2), var(--accent));
+      color: #fff;
+      text-decoration: none;
+      border-radius: 999px;
+      font-size: 1rem;
+      font-weight: 600;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.15);
+    }
+
+    .cta a:hover {
+      filter: brightness(1.05);
+      transform: translateY(-2px);
+    }
+
+    footer {
+      text-align: center;
+      padding: 40px 20px;
+      color: var(--muted);
+      font-size: 0.85rem;
+    }
+
+    @media (max-width: 700px) {
+      h1 { font-size: 2.2rem; }
+      h2 { font-size: 1.5rem; }
+    }
+  </style>
+</head>
+
+<body>
+
+<header>
+  <h1>Sista 'Big Dress'™ Licensing</h1>
+  <p class="tagline">
+    A visual language of power, softness, identity, and expansive presence.  
+    License CultureCare’s signature imagery for your brand, curriculum, campaign, or digital experience.
+<div class="separator" style="clear: both;">
+  <a
+    href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgMAGACDI9f6lk4P-3it79O9e8TZuMMogI_q5V4M4k72-awdKYvIU7rgxmFE7o2fAlvkMshGVJWbZIbPDun-fvKfbTrzUhiGoJ8nUv49FCeQyYpPQ2M42MvtQGnIyPJDgehYL_-QdvZt3qdqXS_kmPE5CzrrFEkVsjRYMOWDEXUtWWlLmgEHxzluGP0cMQH/s1536/sistabigdress.png.png"
+    style="display: block; padding: 1em 0; text-align: center; "
+    ><img
+      alt=""
+      border="0"
+      height="320"
+      data-original-height="1536"
+      data-original-width="1024"
+      src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgMAGACDI9f6lk4P-3it79O9e8TZuMMogI_q5V4M4k72-awdKYvIU7rgxmFE7o2fAlvkMshGVJWbZIbPDun-fvKfbTrzUhiGoJ8nUv49FCeQyYpPQ2M42MvtQGnIyPJDgehYL_-QdvZt3qdqXS_kmPE5CzrrFEkVsjRYMOWDEXUtWWlLmgEHxzluGP0cMQH/s320/sistabigdress.png.png"
+  /></a>
+</header>
+<section class="section">
+  <h2>What You Can License</h2>
+
+  <div class="card">
+    <strong>Sista Big Dress Energy™ Collection</strong>
+    <p>
+      The iconic silhouette that anchors your brand’s story of identity, belonging, and taking up space.
+      Available for digital, print, curriculum, and campaign use.
+    </p>
+    <div class="pill-row">
+      <span class="pill">Signature Dress Silhouettes</span>
+      <span class="pill">Colorway Variants</span>
+      <span class="pill">Affirmation Graphics</span>
+      <span class="pill">Workshop Visuals</span>
+    </div>
+  </div>
+
+  <div class="card">
+    <strong>Sunbeam Signals™</strong>
+    <p>
+      Warm, radiant visual metaphors for alignment, clarity, and emotional wellness.
+      Perfect for wellness brands, youth programs, and leadership development.
+    </p>
+    <div class="pill-row">
+      <span class="pill">Sunburst Icons</span>
+      <span class="pill">Energy Maps</span>
+      <span class="pill">Mood Signals</span>
+    </div>
+  </div>
+
+  <div class="card">
+    <strong>Big Dress Doll™ Characters</strong>
+    <p>
+      Playful, expressive figures ideal for youth programs, STEAM curriculum, and digital platforms.
+    </p>
+    <div class="pill-row">
+      <span class="pill">Character Sheets</span>
+      <span class="pill">Emotion Variants</span>
+      <span class="pill">Learning Modules</span>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <h2>Who Licenses Sista 'Big Dress' Energy™</h2>
+
+  <div class="card">
+    <ul>
+      <li>Wellness brands and coaches</li>
+      <li>Educational and youth leadership programs</li>
+      <li>Corporate DEI and culture teams</li>
+      <li>Publishing houses and media creators</li>
+      <li>Digital platforms and app developers</li>
+      <li>Community organizations and cultural institutions</li>
+    </ul>
+  </div>
+</section>
+
+<section class="section">
+  <h2>How Licensing Works</h2>
+
+  <div class="card">
+    <p>
+      Every project is unique. CultureCare offers flexible licensing options including:
+    </p>
+       <p>
+      You’ll receive a tailored proposal based on your project’s scope, audience, and timeline.
+    </p>
+  </div>
+</section> <ul>
+      <li>Digital‑only usage</li>
+      <li>Print and publishing rights</li>
+      <li>Internal corporate usage</li>
+      <li>Public‑facing campaigns</li>
+      <li>Educational distribution</li>
+      <li>Commercial product licensing</li>
+      <li>Custom collaborations</li>
+    </ul>
+
   <title>CultureCare Visual Licensing Inquiry</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
