Fix form tag duplication in index.html

--- a/index.html
+++ b/index.html
@@ -672,7 +672,10 @@
             by a signed licensing agreement.
           </p>
         </div>
-      </form>
+      </form <form action="javascript:void(0);" method="POST">
+      <form action="javascript:void(0);" method="POST">
+
+
     </section>
   </main>
   
